changed api definition and implementation to use path instead of query for date
